fix align classes

--- a/common/common.css
+++ b/common/common.css
@@ -12,7 +12,7 @@
 
 .justify-content-around, .flex-around { justify-content: space-around; }
 .justify-content-between, .flex-between { justify-content: space-between; }
-.align-items-start, .align-start { align-items: start; }
+.align-items-flex-start, .align-flex-start { align-items: flex-start; }
 .align-items-center, .align-center { align-items: center; }
 
 .flex-nowrap { flex-wrap: nowrap; }
